--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+
 .App {
   text-align: center;
 }
@@ -35,6 +38,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.navbar {
+  background-color: steelblue;
+}
+
+.navbar-brand {
+  font-family: 'Poor Story', cursive;
+  font-size: 2.5rem;
+  text-shadow: 2px 2px darkblue;
 }
 
 .navbar-dark .navbar-nav .nav-link {
