--- a/client/src/pages/css/LandingPage.css
+++ b/client/src/pages/css/LandingPage.css
@@ -25,3 +25,8 @@
   text-decoration: none;
   font-size: 1.4rem;
 }
+
+.titleText {
+  font-family: 'Teko', sans-serif;
+  text-transform: uppercase;
+}
