Add pet search result component and display example on search screen

--- a/client/src/pages/css/BrowsePetsPage.css
+++ b/client/src/pages/css/BrowsePetsPage.css
@@ -3,7 +3,10 @@
 }
 
 .searchControls {
-  border: 2px solid black;
+  border: 3px solid black;
   border-radius: 10px;
   margin: 0 2rem;
+  max-height: 750px;
+  min-width: 400px;
+  overflow-y: auto;
 }
