--- a/client/src/components/pets/css/PetSearchResult.css
+++ b/client/src/components/pets/css/PetSearchResult.css
@@ -3,7 +3,14 @@
   border: 2px solid black;
   border-radius: 10px;
   box-shadow: 3px 3px 4px gray;
+  color: black;
   margin: 1rem;
   max-width: 425px;
   padding: 0.5rem;
+  text-decoration: none;
+}
+
+.petSearchResult:hover {
+  color: black;
+  text-decoration: none;
 }
