--- a/client/src/components/images/css/ImageManagement.css
+++ b/client/src/components/images/css/ImageManagement.css
@@ -1,5 +1,22 @@
 .avatar {
   outline: 2px dashed gray;
+  position: relative;
+  z-index: 1;
+}
+
+.avatar::after {
+  content: "Avatar";
+  color: black;
+  background-color: white;
+  opacity: 0.5;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  position: absolute;
+  padding: 0 4px;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+  z-index: 0;
 }
 
 .clickable {
