Add basic admin landing page

--- a/client/src/components/pets/css/PetSearchResult.css
+++ b/client/src/components/pets/css/PetSearchResult.css
@@ -1,5 +1,7 @@
 .petProfileQuickView {
+  border-width: 1px;
   min-width: 450px;
+  box-shadow: 6px 6px 10px gray;
 }
 
 .petProfileQuickViewTable {
