--- a/client/src/pages/css/Notification.css
+++ b/client/src/pages/css/Notification.css
@@ -5,22 +5,7 @@
    margin: auto
 }
 
-.col{
-    padding:10px 5px !important;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.row{
-    padding: 20px;
-    border: 1px solid black;
-    border-radius: 20px;
-    margin: 20px !important;
-    background-color: white;
-}
-
-.container{
+.container.notifications{
     margin: 50px auto;
     border-radius: 20px;
     padding: 20px;
@@ -35,21 +20,17 @@
     margin-bottom: 0px;
 }
 
-.col .adopt-btn{
-    font-size: 0.8em;
-}
-
-.card{
+.card.card-horizontal{
     flex-direction: row;
     width: 100%;
     margin: 10px 0
 }
-.card .card-img-left{
+.card.card-horizontal .card-img-left{
     max-height: 150px;
     width: 150px;
 }
 
-.card span{
+.card.card-horizontal span{
     padding: 5px
 }
 
