--- a/client/src/components/pets/css/PetSearchResult.css
+++ b/client/src/components/pets/css/PetSearchResult.css
@@ -15,7 +15,8 @@
   box-shadow: 3px 3px 4px gray;
   color: black;
   margin: 1rem;
-  max-width: 425px;
+  max-width: 350px;
+  min-width: 350px;
   padding: 0.5rem;
   text-decoration: none;
 }
