--- a/client/src/App.css
+++ b/client/src/App.css
@@ -107,6 +107,7 @@ img.notification-icon{
 }
 
 .site-branding {
+  padding: 0 0.5rem;
   position: relative;
 }
 
@@ -117,7 +118,7 @@ img.notification-icon{
 .site-loading-indicator {
   position: absolute;
   top: -1px;
-  left: -4px;
+  left: 4px;
   height: 3.6rem;
   width: 3.6rem;
   z-index: 0;
