--- a/client/src/pages/css/BrowsePetsPage.css
+++ b/client/src/pages/css/BrowsePetsPage.css
@@ -7,7 +7,8 @@
   border-radius: 10px;
   margin: 0 2rem;
   max-height: 750px;
-  min-width: 400px;
+  max-width: 400px;
+  min-width: 300px;
   overflow-y: auto;
 }
 
