integrate the edit and delete routes for requests with the front end, change the adopt and date request buttons to have a modal for adding a message, adding admin check from cognito

--- a/client/src/pages/css/Notification.css
+++ b/client/src/pages/css/Notification.css
@@ -37,3 +37,13 @@
 .card-text.status{
     text-transform: uppercase;
 }
+
+.options-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center
+}
+
+.options-container p{
+    margin-bottom: 0;
+}
