add button to allow regular users to delete their account

--- a/client/src/pages/css/Dashboard.css
+++ b/client/src/pages/css/Dashboard.css
@@ -75,3 +75,7 @@ form.change-password{
 .dashboard-container .fields{
     border: none !important;
 }
+
+.btn-danger, .btn-success{
+    margin: 20px;
+}
