adjust some styling/fonts on landing page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,7 +45,7 @@
 }
 
 .navbar-brand {
-  font-family: 'Poor Story', cursive;
+  font-family: 'Neucha';
   font-size: 2.5rem;
   text-shadow: 2px 2px darkblue;
 }
