clean up the nav bar a bit - migrate the admin and user search tabs to the dashboard menu

--- a/client/src/pages/css/Dashboard.css
+++ b/client/src/pages/css/Dashboard.css
@@ -79,3 +79,10 @@ form.change-password{
 .btn-danger, .btn-success{
     margin: 20px;
 }
+
+.titleText.small{
+    font-size: 48px;
+}
+.dashboard{
+    padding:40px;
+}
