remove carousel from pet profile page and tidy up some styling

--- a/client/src/pages/css/PetProfile.css
+++ b/client/src/pages/css/PetProfile.css
@@ -1,23 +1,8 @@
-.carousel-container{
-    width: 90%;
-    margin: auto;
-}
-
-.slick-slide img {
-    margin: auto;
-    width: 100%;
-    height: auto;
-    filter: blur(2px);
-}
-
-.slick-slide.slick-current img{
-    filter: unset;
-}
-
 .profile-container{
     display: flex;
     flex-direction: row;
     margin: 50px auto auto auto;
+    width: 75%;
 }
 
 .profile-info{
@@ -36,19 +21,7 @@
 
 .bio-box{
     /*border: 1px solid black;*/
-    margin: 50px 0px 0px 0px;
-}
-
-.slick-prev:before,
-.slick-next:before {
-  color: black;
-}
-
-.slick-next{
-    right: -40px;
-}
-.slick-prev{
-    left: -40px;
+    margin: 30px 0px 0px 0px;
 }
 
 span.label{
@@ -78,4 +51,12 @@ span.label{
     display: flex;
     flex-wrap: wrap;
 
+}
+
+.profile-avatar{
+    height: 400px;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 10px;
 }
