adjust some styling on images for petSearch component

--- a/client/src/components/pets/css/PetSearchResult.css
+++ b/client/src/components/pets/css/PetSearchResult.css
@@ -65,3 +65,9 @@
 .petSearchResult:hover > .deleteButtonBackground {
   opacity: 1;
 }
+
+.avatar-card{
+  height: 275px;
+  object-fit: cover;
+  object-position: center;
+}
