--- a/client/src/pages/css/LandingPage.css
+++ b/client/src/pages/css/LandingPage.css
@@ -38,6 +38,6 @@
   font-family: 'Noto Sans', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 70px;
+  font-size: 4rem;
 }
 
