--- a/client/src/pages/css/ShelterProfile.css
+++ b/client/src/pages/css/ShelterProfile.css
@@ -1,4 +1,4 @@
-.shelter.pets-container{
+.shelter-container .shelter.pets-container{
     border: lightgrey 1px solid;
     justify-content: center;
     border-radius: 5px;
