--- a/client/src/pages/css/PetProfile.css
+++ b/client/src/pages/css/PetProfile.css
@@ -2,15 +2,11 @@
     display: flex;
     flex-direction: row;
     margin: 50px auto auto auto;
-    width: 75%;
+    width: 70%;
 }
 
 .profile-info{
     height: 100%;
-}
-
-.right{
-    width: 70%;
 }
 
 .info-container{
@@ -54,9 +50,22 @@ span.label{
 }
 
 .profile-avatar{
-    height: 400px;
+    height: 450px;
     width: 100%;
     object-fit: cover;
     object-position: center;
     border-radius: 10px;
+}
+
+.edit-pet.btn{
+    width: 80%;
+    margin: 20px auto;
+}
+
+.pet-name-title{
+    font-size: 2em;
+}
+
+.modal-footer{
+    justify-content: center;
 }
